# sardine

./: .git-blame-ignore-revs  .gitignore  404.html  :  CNAME  MANIFEST.in  Makefile  README.md  about.html  audio_engine.html  basics.html  build.py  configuration.html  dada.py  diving_deeper.html  editors.html  getting_started.html  index.html  install_sardine.sh  installation.html  mkdocs.yml  old_pyproject.toml  pattern_languages.html  print.html  pyproject.toml  requirements.txt  searchindex.js  searchindex.json  setup.py  showcase.html  sitemap.xml  speedscope.json  test.py  test_stuff.py  test_zone.py  tmp.py  updating.html
.github/workflows/: black.yml  build-dock.yml  build-docs.yml  build-static.yml  build-wheels.yml  deploy.yml  python-publish.yml  static.yml
.vim/: coc-settings.json
Midi_Naive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
about/: contributions.html  index.html  strategies.html  website.html  why.html
audio_engine/: distortion.html  effects.html  filtering.html  hidden_gems.html  sampler.html
basics/: period-divisor-rate.html  player-vs-swimfunction.html  player_arguments.html  players.html  senders.html  swimfunction.html  tempo_and_playback.html
bibu/: Clock.py  __init__.py  osc.py
cli/: README.md  main.py
configuration/: configuration_tool.html  configuration_tour.html  midi.html  midi_controller.html  midi_instrument.html  osc.html  superdirt.html
diving_deeper/: amphibian_variables.html  daw.html  extensions.html  external_clock.html  externals.html  fishbowl.html  high_level_patterns.html  nudging.html  pattern_object.html  presets.html  python-sampleslicer.html  python.html  sleeping.html  supercollider.html
docs/: :w  CNAME  about.md  configuration.md  documentation.org  index.html  index.md  installation.md  reference.md  sardinopedia.md  showcase.md  troubleshot.md  tutorial.md  ²
docs/documentation/: reference.md  sardinopedia.md  survival_kit.md  tutorial.md
docs/gray/: gray.css
docs/oldwebsite/: about.md
docs/org/: documentation.aux  documentation.fdb_latexmk  documentation.fls  documentation.html  documentation.org  documentation.out  documentation.tex
docs/overrides/: home.html
docs/sardine_doc/: book.toml
docs/technical/: configuration.md  installation.md  troubleshot.md
documentation/reference/: index.html
documentation/sardinopedia/: index.html
documentation/tutorial/: index.html
editors/: doom.html  fishery.html  flok.html  others.html  vim.html  vscode.html
examples/: 01_simple.py  02_recursive.py  03_decorators.py  04_error_handling.py  05_OSC.py  07_MIDI.py  README.md  XX_interesting_rhythm.py  XX_investigate.py  XX_new_parser.py  XX_playground.py  XX_test.py  XX_writing_readme.py  test.py
fishery/: UserConfig.py  __main__.py  console.py  profiler.py  runners.py  scode.py
fishery/client/: package-lock.json  package.json  svelte.config.js  vite.config.ts
fishery/old.client/: package.json
fishery/server/: flask_server.py
getting_started/: code_evaluation.html  patterns.html  samples_and_synths.html  starting.html
installation/: linux.html  macos.html  post_install_checkup.html  preliminary_words.html  windows.html
midi_naive/: Clock.py  __init__.py
paper/: Makefile  iclc2023.html  iclc2023.md  references.bib  ²
paper/.auctex-auto/: references.el
paper/css/: iclc.css
pattern_languages/: sardine.html  vortex.html  ziffers.html
pattern_languages/sardine/: addresses.html  choice.html  combinatorics_functions.html  conditions.html  extend.html  extend_repeat.html  filter_functions.html  function_library.html  logic.html  low_frequency_oscillators.html  math_functions.html  melodic_functions.html  names.html  notes.html  numbers.html  operators.html  ramp.html  range.html  repeat.html  rhythm_functions.html  silence.html  slicing.html  time_functions.html  variable_functions.html
pattern_languages/vortex/: clock.html  functions.html  mininotation.html  players.html  querying.html
pattern_languages/ziffers/: chords.html  euclidian.html  lists.html  pitch.html  random.html  rhythm.html  what_is_ziffers.html
presentation/: community.html  what_is_live_coding.html  what_is_sardine.html
sardine/: :  AsyncRunner.py  Clock.py  FishBowl.py  README.md  Sound.py  UserConfig.py  __init__.py  __main__.py  __old__init__.py  cat  console.py  event_loop.py  fish_bowl.py  package-lock.json  package.json  python  run.py  todo.md  ²
sardine/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
sardine/Components/: BaseClock.py  BaseHandler.py  BaseParser.py  Environment.py
sardine/Handlers/: DummyHandler.py  MidiHandler.py  OSCHandler.py  SleepHandler.py  SuperColliderHandler.py  SuperDirtHandler.py  __init__.py
sardine/base/: BaseClock.py  BaseHandler.py  __init__.py  clock.py  handler.py  parser.py  runner.py  stream.py
sardine/cli/: README.md  __init__.py  main.py
sardine/client/: index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts
sardine/clock/: AsyncRunner.py  Clock.py  Environment.py  FishBowl.py  InternalClock.py  LinkClock.py  Logging.py  OldClock.py  README.md  Time.py  __init__.py  internal_clock.py  link_clock.py  time.py
sardine/event_loop/: __init__.py  loop.py  mixin.py  policy.py  sansio.py
sardine/handlers/: *  OSCHandler.py  SuperColliderHandler.py  SuperDirtHandler.py  __init__.py  dummy.py  midi.py  midi_in.py  missile.py  osc.py  osc_in.py  osc_loop.py  pattern_holder.py  player.py  player_ziffer.py  player_ziffers.py  sender.py  supercollider.py  superdirt.py  tidal_loop.py  ziffmidi.py  ziffsuperdirt.py
sardine_core/: __init__.py  fish_bowl.py  run.py
search/: search_index.json
showcase/: acousmatic_tekno.html  artificial_life.html  auzon.html  claude.html  dumpster_dive.html  index.html  solstice.html  transport_variations.html  zorba.html
site/: 404.html  index.html  sitemap.xml
stylesheets/: extra.css
tests/: __init__.py  q  test_pattern_parsing.py  test_patterning.py  test_patterns.py  test_utils.py
updating/: install_errors.html  sardine.html  superdirt.html  updating.html
(+430 files in other folders)
