[tool.poetry]
name = "sardine"
version = "0.1.0"
description = "Python's missing algorave module"
authors = ["Raphael Forment <raphael.forment@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers, Musicians",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"
LinkPython = "^0.1"
python-rtmidi = "^1.4.9"
mido = "^1.2.10"
osc4py3 = "^1.0.8"
uvloop = {version = "^0.16.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'"}
click = "^8.1.3"
appdirs = "^1.4.4"
psutil = "^5.9.2"
rich = "^12.5.1"
lark = "^1.1.2"
ptpython = "^3.0.20"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core", "wheel", "setuptools-cpp", "setuptools", "distutils"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sardine-config-python = 'cli.main:edit_python_configuration'
sardine-config-superdirt = 'cli.main:edit_superdirt_configuration'
sardine-config = 'cli.main:main'
