[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sardine"
version = "0.1.0"
description = "Python's missing algorave module"
authors = [
    {name = "Raphaël Forment", email="raphael.forment@gmail.com"},
    {email = "raphael.forment@gmail.com"}
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10"

keywords = ["algorave", "live-coding", "music", "patterns"]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Requirements: This is done differently by poetry!
dependencies = [
    "Click>=8.1.3",
    "LinkPython>=0.1",
    "python-rtmidi>=1.4.9",
    "inquirerpy>=0.3.4",
    "easing-functions>=1.0.4",
    "mido>=1.2",
    "osc4py3>=1.0.8",
    "uvloop>=0.16; sys_platform != 'win32'",
    "appdirs>=1.4",
    "psutil>=5.9",
    "rich>=12.5",
    "lark>=1.1",
    "exceptiongroup>=1.0.4",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
    "black>=22.8",
    "pylint>=2.15",
    "pytest>= 7.2.0",
    "pytest-asyncio>=0.20.2",
]
profile = [
    "yappi>=1.4.0",
]

[project.urls]
homepage = "https://sardine.raphaelforment.fr"
documentation = "https://sardine.raphaelforment.fr"
repository = "https://github.com/Bubobubobubobubo/sardine"
"Bug Tracker" = "https://github.com/Bubobubobubobubo/sardine/issues"

[project.scripts]
sardine-config-python = 'sardine.cli.main:edit_python_configuration'
sardine-config-superdirt = 'sardine.cli.main:edit_superdirt_configuration'
sardine-config = 'sardine.cli.main:main'

[tool.black]
target_version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
