[build-system]
requires = ["setuptools>=67.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sardine-system"
dynamic = ["version"]
description = "Python's missing algorave module"
authors = [
    { name = "Raphaël Forment" },
    { email = "raphael.forment@gmail.com" },
    { name = "thegamecracks" },
]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.10"

keywords = ["algorave", "live-coding", "music", "patterns"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Artistic Software",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

# Requirements: This is done differently by poetry!
dependencies = [
    "ziffers>=0.0.1",
    "parsimonious>=0.10.0",
    "pygtail>=0.14.0",
    "Flask-SocketIO>=5.3.2",
    "Flask-Cors>=3.0",
    "Flask>=2.2.2",
    "Click>=8.1.3",
    "LinkPython-extern>=1.0.2",
    "python-rtmidi>=1.4.9",
    "inquirerpy>=0.3.4",
    "easing-functions>=1.0.4",
    "mido>=1.2",
    "osc4py3>=1.0.8",
    "uvloop>=0.16; sys_platform != 'win32'",
    "appdirs>=1.4",
    "psutil>=5.9",
    "rich>=12.5",
    "lark>=1.1",
    "exceptiongroup>=1.0.4",
]

[tool.setuptools]
# Explicitly declare data files in [tool.setuptools.package-data]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "sardine_core.__version__" }

[tool.setuptools.packages.find]
include = ["sardine_core**", "sardine**"]
namespaces = false

[tool.setuptools.package-data]
"sardine_core.sequences.sardine_parser" = ["*.lark"]
"sardine_core.superdirt" = ["*.scd"]

[tool.isort]
profile = "black"
skip_gitignore = true

[project.optional-dependencies]
dev = [
    "black>=22.8",
    "pylint>=2.15",
    "pytest>= 7.2.0",
    "pytest-asyncio>=0.20.2",
]
profile = [
    "yappi>=1.4.0",
]

[project.urls]
Homepage = "https://sardine.raphaelforment.fr"
Documentation = "https://sardine.raphaelforment.fr"
"Source Code" = "https://github.com/Bubobubobubobubo/sardine"
"Bug Tracker" = "https://github.com/Bubobubobubobubo/sardine/issues"

[project.scripts]
sardine = 'sardine.__main__:main'

[tool.black]
target_version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
